--- a/styles/FloatingDiv.module.css
+++ b/styles/FloatingDiv.module.css
@@ -1,16 +1,21 @@
 .FloatingDiv {
-    position: absolute;
-    top: 30rem;
-    display: flex;
-    color: var(--blue);
-    align-items: center;
-    background-color: white;
-    border-radius: 17px;
-    padding: 20px 28px 20px 20px;
-    height: 4.5rem;
-    box-shadow: 2px 23px 27px 6px rgba(79, 144, 255, 0.42);
-    font-weight: bold;
+  position: absolute;
+  top: 33rem;
+  display: flex;
+  color: var(--blue);
+  align-items: center;
+  background-color: white;
+  border-radius: 17px;
+  padding: 20px 28px 20px 20px;
+  height: 4.5rem;
+  box-shadow: 2px 23px 27px 6px rgba(79, 144, 255, 0.42);
+  font-weight: bold;
+}
+.FloatingDiv > span {
+  font-size: 18px;
+}
+@media screen and (max-width: 768px) {
+  .FloatingDiv {
+    top: 45rem;
   }
-  .FloatingDiv > span {
-    font-size: 18px;
-  }
+}
